--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using App.EndPoints.MvcUi.Models.Authenticate;
 @using App.EndPoints.MvcUi.Models.Home;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Comments;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Wages;
 @using App.Domain.Core._User.Entities;
 
 @using Microsoft.AspNetCore.Identity
