--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -100,7 +100,8 @@
                                 <ul class="sub-menu" id="products" data-parent="#sidebar-menu">
                                     <li><a class="sidenav-item-link" href="product-add.html"><span class="nav-text">افزودن محصول</span></a></li>
                                     <li>
-                                        <a class="sidenav-item-link" href="product-list.html">
+                                        <a class="sidenav-item-link"
+                                           asp-controller="Product" asp-action="Index">
                                             <span class="nav-text">لیست محصولات</span>
                                         </a>
                                     </li>
@@ -218,6 +219,12 @@
                     <div class="navbar-right">
                         <ul class="nav navbar-nav">
                             <li class="dropdown user-menu">
+                                <div class=" nav-link">
+                                    <b>موجودی : 1500 تومان</b>
+                                </div>
+                            </li>
+
+                            <li class="dropdown user-menu">
                                 <button class="dropdown-toggle nav-link ec-drop"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                     <img src="~/assets/Admin/img/user/user.png"
@@ -245,6 +252,7 @@
                                     <li class="dropdown-footer"><a href="index.html"><i class="mdi mdi-logout"></i> خروج </a></li>
                                 </ul>
                             </li>
+
                             <li class="dropdown notifications-menu custom-dropdown">
                                 <button class="dropdown-toggle notify-toggler custom-dropdown-toggler">
                                     <i class="mdi mdi-bell-outline"></i>
