[Develop].[Seller].[auctions]:the Seller can see the Auctions list

--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/BoothProduct/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/BoothProduct/Create.cshtml
@@ -13,8 +13,7 @@
             <div class="ec-vendor-card-header">
                 <h5> جزئیات سفارش</h5>
                 <div class="ec-header-btn">
-                    <a class="btn btn-lg btn-primary" asp-controller="Customer" asp-action="Index">بازگشت  </a>
-                    <a href="@Model.MainUrl" class="ec-btn-group btn btn-success">بازگشت></a>
+                    <a class="btn btn-lg btn-success" asp-controller="Customer" asp-action="Index">بازگشت  </a>
 
                 </div>
             </div>
@@ -51,7 +50,7 @@
                                 </div>
 
                                 <div class="col-4 justify">
-                                  <button type="submit"  class="ec-btn-group btn btn-success"> ثبت قبمت</button>
+                                  <button type="submit"  class="ec-btn-group btn btn-success"> ثبت قیمت</button>
                                 </div>
                         
                             </div>
