--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.Domain.Core._User.Entities;
+@using App.Domain.Core._Products.Enums;
 @using App.EndPoints.MvcUi
 @using App.EndPoints.MvcUi.Models
 @using App.EndPoints.MvcUi.Models.Authenticate;
