--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Auction/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Auction/Create.cshtml
@@ -17,7 +17,14 @@
             <div class="ec-vendor-card-header">
                 <h5> ثبت مزایده </h5>
                 <div class="ec-header-btn">
-                    <a href="@Model.MainUrl" class="btn btn-lg btn-primary">بازگشت -></a>
+                    @if (@Model.MainUrl != null)
+                    {
+                        <a href="@Model.MainUrl" class="btn btn-lg btn-primary">بازگشت -></a>
+
+                    }else
+                    {
+                        <a href="@Model.MainUrl" asp-controller="Product" asp-action="ParentCategories">دسته بندی محصولات </a>
+                    }
 
                 </div>
             </div>
@@ -45,20 +52,22 @@
 
                             <div class="row d-flex align-items-end mt-3">
                                 <label class="form-label">زمان آغاز:</label>
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.StartYear" class="form-label"></label>
                                     <input asp-for="@Model.StartYear" class="form-control" type="text" />
                                 </div>
 
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.StartMonth" class="form-label"></label>
                                     <input asp-for="@Model.StartMonth" class="form-control" type="text" />
                                 </div>
-                                <div class=" col-3">
+                            </div>
+                            <div class="row d-flex align-items-end mt-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.StartDay" class="form-label"></label>
                                     <input asp-for="@Model.StartDay" class="form-control" type="text" />
                                 </div>
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.StartHour" class="form-label"></label>
                                     <input asp-for="@Model.StartHour" class="form-control" type="text" />
                                 </div>
@@ -67,20 +76,22 @@
 
                             <div class="row d-flex align-items-end mt-3">
                                 <label class="form-label">زمان اتمام:</label>
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.EndYear" class="form-label"></label>
                                     <input asp-for="@Model.EndYear" class="form-control" type="text" />
                                 </div>
 
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.EndMonth" class="form-label"></label>
                                     <input asp-for="@Model.EndMonth" class="form-control" type="text" />
                                 </div>
-                                <div class=" col-3">
+                            </div>
+                            <div class="row d-flex align-items-end mt-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.EndDay" class="form-label"></label>
                                     <input asp-for="@Model.EndDay" class="form-control" type="text" />
                                 </div>
-                                <div class=" col-3">
+                                <div class=" col-4">
                                     <label asp-for="@Model.EndHour" class="form-label"></label>
                                     <input asp-for="@Model.EndHour" class="form-control" type="text" />
                                 </div>
