[Debug].[Admin].[Wages]:Debug the wage customer name and wage amount view

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/AdminPanel/Index.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/AdminPanel/Index.cshtml
@@ -40,7 +40,7 @@
                                             <td>@item.FeePercenteage درصد</td>
 
                                             <td>
-                                                  @item.FeePercenteage تومان
+                                                  @item.WageAmount تومان
                                             </td>
                                         </tr>
 
