--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/Create.cshtml
@@ -17,7 +17,7 @@
                                 <h6>  <label asp-for="@Model.Product.Name" for="inputEmail4" class="form-label">نام محصول</label></h6>
                                             <input asp-for="@Model.Product.Name" class="form-control" id="inputEmail4">
                                         </div>
-                            <div class="col-md-6" mt-2>
+                            <div class="col-md-6 mt-2">
 
                                 <h6>
                                     <label asp-for="@Model.Product.CategoryId" class="form-label"></label></h6>
@@ -36,21 +36,21 @@
                                              <span asp-validation-for="@Model.Product.CategoryId" class="text-danger"></span>
 
                              </div>
-                            <div class="col-md-6" mt-2>
+                            <div class="col-md-6 mt-2">
                                 <h6>
                                     <label asp-for="@Model.Product.Brand" for="inputEmail4" class="form-label"></label></h6>
                                             <input asp-for="@Model.Product.Brand" type="text" class="form-control" id="inputEmail4">
                                 <span asp-validation-for="@Model.Product.Brand" class="text-danger"></span>
 
                                         </div>
-                            <div class="col-md-6" mt-2>
+                            <div class="col-md-6 mt-2">
                                 <h6>
                                     <label asp-for="@Model.Product.Grantee" for="inputEmail4" class="form-label">گارانتی</label></h6>
                                             <input asp-for="@Model.Product.Grantee" type="text" class="form-control" id="inputEmail4">
                                 <span asp-validation-for="@Model.Product.Grantee" class="text-danger"></span>
 
                                         </div>
-                            <div class="col-md-12" mt-2>
+                            <div class="col-md-12 mt-2">
                                 <h6>
                                 <label asp-for="@Model.Product.Description" class="form-label">توضیحات </label></h6>
                                              <textarea asp-for="@Model.Product.Description" class="form-control" rows="2"></textarea>
@@ -58,33 +58,33 @@
 
                                         </div>
 
-                            <div class="col-md-6" mt-2>
+                            <div class="col-md-6 mt-2">
                                 <h6>
                                         <label asp-for="@Model.Product.BasePrice" class="form-label"> </label></h6>
                                         <input asp-for="@Model.Product.BasePrice" type="number" class="form-control" id="price1">
                                         <span asp-validation-for="@Model.Product.BasePrice" class="text-danger"></span>
                                          </div>
 
-                            <div class="col-md-6" mt-2>
+                            <div class="col-md-6 mt-2">
                                             <h6><label asp-for="@Model.Product.Pictures" class="form-label"></label></h6>
                                             <input asp-for="@Model.Product.Pictures" class="form-control"/>
                                             <span asp-validation-for="@Model.Product.Pictures" class="text-danger"></span>
                                         </div>
-                            <div class="col-md-12" mt-2>
+                            <div class="col-md-12 mt-2">
                                 <h6>
                                     <label asp-for="@Model.Product.InformationDetails" class="form-label">جزییات کامل</label></h6>
                                             <textarea asp-for="@Model.Product.InformationDetails" class="form-control" rows="4"></textarea>
                                             <span asp-validation-for="@Model.Product.InformationDetails" class="text-danger"></span>
 
                                         </div>
-                            <div class="col-md-12" mt-2>
+                            <div class="col-md-12 mt-2">
                                 <h6>
                                         <label asp-for="@Model.Product.IncludedComponents" class="form-label"></label></h6>
                                         <textarea asp-for="@Model.Product.IncludedComponents" class="form-control" rows="4"></textarea>
                                             <span asp-validation-for="@Model.Product.IncludedComponents" class="text-danger"></span>
 
                                         </div>
-                            <div class="col-md-12" mt-2>
+                            <div class="col-md-12 mt-2">
                                             <button type="submit" class="btn btn-primary mt-3">ارسال</button>
                                         </div>
                                     </form>
