[Debug].[Authenticate].[Login]: send to register page button add login page

--- a/App.EndPoints.MvcUi/Views/Authenticate/Login.cshtml
+++ b/App.EndPoints.MvcUi/Views/Authenticate/Login.cshtml
@@ -41,7 +41,7 @@
                                     </div>
                             <span class="ec-login-wrap ec-login-btn">
                                 <button class="btn btn-primary mt-2" type="submit">ورود</button>
-                                <a asp-controller="Authenticate" asp-action="" class="btn btn-secondary mt-2">ثبت نام</a>
+                                <a asp-controller="Authenticate" asp-action="CustomerRegister" class="btn btn-secondary mt-2">ثبت نام</a>
                             </span>
                         </form>
                             
