[Debug].[Seller].[Register]:Layout's Seller register button link Debuged

--- a/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
                                             <a class="dropdown-item" asp-controller="Authenticate" asp-action="CustomerRegister"> ثبت نام</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" asp-controller="Authenticate" asp-action="VendorRegister"> فروشنده شوید </a>
+                                            <a class="dropdown-item" asp-controller="Authenticate" asp-action="SellerRegister"> فروشنده شوید </a>
                                         </li>
                                     }
                                 </ul>
@@ -234,7 +234,7 @@
                                             <a class="dropdown-item" asp-controller="Authenticate" asp-action="CustomerRegister"> ثبت نام</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" asp-controller="Authenticate" asp-action="VendorRegister"> فروشنده شوید </a>
+                                            <a class="dropdown-item" asp-controller="Authenticate" asp-action="SellerRegister"> فروشنده شوید </a>
                                         </li>
                                     }
                                     </ul>
