--- a/App.EndPoints.MvcUi/Views/Authenticate/CustomerRegister.cshtml
+++ b/App.EndPoints.MvcUi/Views/Authenticate/CustomerRegister.cshtml
@@ -18,43 +18,47 @@
                     <div class="ec-register-form">
 
                         <form asp-action="CustomerRegister" method="post">
-                            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                            <span class="ec-register-wrap">
+                                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                            </span>
+
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.FirstName" class="form-text"></label>
-                                <input asp-for="@Model.FirstName" class="form-controller" placeholder="نام خود را وارد کنید">
                                 <span asp-validation-for="@Model.FirstName" class="text-danger"></span>
+                                <input asp-for="@Model.FirstName" class="form-controller" placeholder="نام خود را وارد کنید">
                             </span>
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.LastName" class="form-text"></label>
-                                <input asp-for="@Model.LastName" class="form-controller" placeholder="نام خانوادگی خود را وارد کنید">
                                 <span asp-validation-for="@Model.LastName" class="text-danger"></span>
+                                <input asp-for="@Model.LastName" class="form-controller" placeholder="نام خانوادگی خود را وارد کنید">
                             </span>
 
                             <span class="ec-register-wrap">
                                 <label asp-for="@Model.Email" class="form-text"></label>
-                                <input asp-for="@Model.Email" class="form-controller" placeholder="وارد کردن ایمیل ">
                                 <span asp-validation-for="@Model.Email" class="text-danger"></span>
+                                <input asp-for="@Model.Email" class="form-controller" placeholder="وارد کردن ایمیل ">
                             </span>
 
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.Password" class="form-text"></label>
-                                <input asp-for="@Model.Password" class="form-controller" placeholder="رمز عبور">
                                 <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                                <input asp-for="@Model.Password" class="form-controller" placeholder="رمز عبور">
                             </span>
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.ConfirmPassword" class="form-text"></label>
-                                <input asp-for="@Model.ConfirmPassword" class="form-controller" placeholder="تکرار رمز عبور">
                                 <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
+                                <input asp-for="@Model.ConfirmPassword" class="form-controller" placeholder="تکرار رمز عبور">
                             </span>
 
                             <span class="ec-register-wrap">
                                 <label asp-for="@Model.Address" class="form-text"></label>
-                                <input asp-for="@Model.Address" class="form-controller" placeholder="آدرس خط اول">
                                 <span asp-validation-for="@Model.Address" class="text-danger"></span>
+                                <input asp-for="@Model.Address" class="form-controller" placeholder="آدرس خط اول">
                             </span>
 
                             <span class="ec-register-wrap">
                                 <label asp-for="@Model.ProvinceId" class="form-text"></label>
+                                <span asp-validation-for="@Model.ProvinceId" class="text-danger"></span>
                                 <span class="ec-rg-select-inner">
                                         <select asp-for="@Model.ProvinceId" class="form-controller">
                                             <option selected="" disabled="">استان </option>
@@ -64,19 +68,18 @@
                                             }
                                         </select>
                                 </span>
-                                <span asp-validation-for="@Model.ProvinceId" class="text-danger"></span>
                             </span>
 
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.City" class="form-text"></label>
-                                <input asp-for="@Model.City" placeholder="نام شهر خود  ">
                                 <span asp-validation-for="@Model.City" class="text-danger"></span>
+                                <input asp-for="@Model.City" placeholder="نام شهر خود  ">
                             </span>
 
                             <span class="ec-register-wrap ec-register-half">
                                 <label asp-for="@Model.PostalCode" class="form-text"></label>
-                                <input asp-for="@Model.PostalCode" placeholder="کد پستی را واردن کنید ">
                                 <span asp-validation-for="@Model.PostalCode" class="text-danger"></span>
+                                <input asp-for="@Model.PostalCode" placeholder="کد پستی را واردن کنید ">
                             </span>
 
 
