[Develop].[Seller].[Booth]:The seller can edit his own Booth info

--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/Components/BoothSidebar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/Components/BoothSidebar/Default.cshtml
@@ -28,9 +28,7 @@
                                data-bs-target="#edit_modal">پروفایل عمومی</a>
                         </li>
                         <li>
-                            <a href="#" data-link-action="editmodal"
-                               title="ویرایش جزییات" data-bs-toggle="modal"
-                               data-bs-target="#2edit_modal">پروفایل غرفه</a>
+                            <a asp-area="SellerArea" asp-controller="SellerPanel" asp-action="EditBoothProfile" title="ویرایش جزییات">پروفایل غرفه</a>
                         </li>
                     </ul>
                 </div>
