--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/Create.cshtml
@@ -21,13 +21,13 @@
 
                                 <h6>
                                     <label asp-for="@Model.Product.CategoryId" class="form-label"></label></h6>
-                                <select asp-for="@Model.Product.CategoryId" name="categories" id="CategoryId" class="form-select">
+                                <select asp-for="@Model.Product.CategoryId" class="form-select">
                                                 @foreach (var pItem in Model.Categories)
                                                 {
                                                    <optgroup label="@pItem.Title ">
                                                       @foreach (var chItem in pItem.Subcategories)
                                                       {
-                                                         <option  value="@chItem.Id"> @chItem.Title</option>
+                                                         <option value="@chItem.Id"> @chItem.Title</option>
                                                       }
                                                     </optgroup>
                                                  }
@@ -86,6 +86,8 @@
                                         </div>
                             <div class="col-md-12 mt-2">
                                             <button type="submit" class="btn btn-primary mt-3">ارسال</button>
+                                            <label class="form-label">* بعد از تایید محصول می توانید برای آن قیمت گذاری کنید.</label>
+
                                         </div>
                                     </form>
                                 </div>
