--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/Components/BoothSidebar/Default.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Shared/Components/BoothSidebar/Default.cshtml
@@ -20,6 +20,7 @@
                     <ul>
                         <li><a asp-area="sellerArea" asp-controller="SellerPanel" asp-action="Index">داشبرد</a></li>
                         <li><a asp-area="sellerArea" asp-controller="Product" asp-action="Create">ثبت محصول</a></li>
+                        <li><a asp-area="sellerArea" asp-controller="Product" asp-action="GetOwned">محصولات ثبت شده</a></li>
                         <li><a asp-area="sellerArea" asp-controller="Product" asp-action="ParentCategories">فروش قطعی و مزایده</a></li>
                         <li><a asp-area="SellerArea" asp-controller="Auction" asp-action="Index">مزایده ها</a></li>
                         <li>
