[Develop].[Seller].[Product]:The seller can Edit Inserted product or delete them

--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/GetOwned.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/Product/GetOwned.cshtml
@@ -1,5 +1,4 @@
-﻿@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Product.ProductEnum;
-@inject FileUploadPathsDto UploadPath;
+﻿@inject FileUploadPathsDto UploadPath;
 @model List<ProductListViewModel>;
 
 <div class="ec-shop-rightside col-lg-9 col-md-12">
