--- a/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/SellerArea/Views/_ViewImports.cshtml
@@ -10,6 +10,7 @@
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.BoothViewModels;
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.BoothProductViewModels;
 @using App.EndPoints.MvcUi.Areas.SellerArea.Models.AuctionViewModels;
+@using App.EndPoints.MvcUi.Areas.SellerArea.Models.ProductViewModels.ProductEnum;
 
 @using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
