[Debuge].[Admin].[Product]:The admin can see the base Prise of product in confirmation page

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/GetAllToConfirm.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/GetAllToConfirm.cshtml
@@ -5,7 +5,7 @@
     <div class="content">
         <div class="breadcrumb-wrapper d-flex align-items-center justify-content-between">
             <div>
-                <h1>محصولات</h1>
+                <h2>محصولات در انتظار تایید</h2>
                 <p class="breadcrumbs">
                     <span><a href="index.html">خانه</a></span> <span>
                         <i class="mdi mdi-chevron-left"></i>
