--- a/App.EndPoints.MvcUi/Views/Product/ProductFullPage.cshtml
+++ b/App.EndPoints.MvcUi/Views/Product/ProductFullPage.cshtml
@@ -166,7 +166,7 @@
                                 <div class="row">
                                     <!--بخش نمایش نظرات مشتریان-->
                                     <div class="ec-t-review-wrapper">
-                                        @if (Model.Comments.Count != 0)
+                                        @if (Model.Comments !=null && Model.Comments.Count != 0)
                                         { 
                                             @foreach (var item in Model.Comments)
                                             {
