[Debuge].[Admin].[Product]:Some titles was wrone in create prduct page

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/Create.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="content">
         <div class="breadcrumb-wrapper d-flex align-items-center justify-content-between">
             <div>
-                <h1>ویرایش محصول</h1>
+                <h1>ثبت محصول جدید</h1>
                 <p class="breadcrumbs">
                     <span><a href="index.html">خانه</a></span> <span>
                         <i class="mdi mdi-chevron-left"></i>
@@ -18,7 +18,7 @@
                 </p>
             </div>
 
-            <div><a asp-asp-controller="Product" asp-action="Details" asp-asp-route-itemid="@Model.Id" class="btn btn-primary">بازگشت</a></div>
+            <div><a asp-controller="AdminPanel" asp-action="Index" class="btn btn-primary">بازگشت</a></div>
 
         </div>
 
