[Develop].[Admin].[Customer]:Admin has full access of Customers and can perform CRUD process on theme.

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             <div class="collapse">
                                 <ul class="sub-menu" id="users" data-parent="#sidebar-menu">
                                     <li><a class="sidenav-item-link" href="user-card.html"><span class="nav-text">گرید کاربران</span></a></li>
-                                    <li><a class="sidenav-item-link" href="user-list.html"><span class="nav-text">لیست کاربران</span></a></li>
+                                    <li><a class="sidenav-item-link" asp-controller="Customers" asp-action="Index"><span class="nav-text">لیست کاربران</span></a></li>
                                     <li>
                                         <a class="sidenav-item-link" href="user-profile.html">
                                             <span class="nav-text">پروفایل کاربر</span>
