--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -5,8 +5,12 @@
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Comments;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Wages;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Product;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Customers;
 @using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.Domain.Core._User.Entities;
+@using App.Domain.Core._User.Enums;
+@using App.Domain.Core._Products.Enums;
+@using App.Frameworks.Web.DateConverter;
 
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
