[Admin].[Product].[EditView]:Back button Url debuged.

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/Edit.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Product/Edit.cshtml
@@ -17,7 +17,7 @@
                 </p>
             </div>
 
-                    <div><a asp-asp-controller="Product" asp-action="Details" asp-asp-route-itemid="@Model.Id" class="btn btn-primary">بازگشت</a></div>
+                    <div><a asp-controller="Product" asp-action="Details" asp-route-itemid="@Model.Id" class="btn btn-primary">بازگشت</a></div>
 
         </div>
 
@@ -125,8 +125,8 @@
                                 <button type="submit" class="btn btn-primary mt-3">ارسال</button>
                             </div>
                         </form>
-                            </div>
-                    </div>
+                            </div>                
+                        </div>
                     </div>
                 </div>
             </div>
