--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Shared/_Layout.cshtml
@@ -36,6 +36,11 @@
                             <a class="sidenav-item-link" href="index.html">
                                 <i class="mdi mdi-view-dashboard-outline"></i> <span class="nav-text">داشبرد</span>
                             </a>
+                        </li>
+                        <li>
+                            <a class="sidenav-item-link" asp-area="" asp-controller="Home" asp-action="Index"> 
+                                <i class="mdi mdi-image-filter-none"></i> <span class="nav-text">صفحه سایت</span>
+                            </a>
                             <hr>
                         </li>
                         <li class="has-sub">
@@ -44,21 +49,21 @@
                             </a>
                             <div class="collapse">
                                 <ul class="sub-menu" id="vendors" data-parent="#sidebar-menu">
-                                    <li>
+@*                                    <li>
                                         <a class="sidenav-item-link" href="vendor-card.html">
                                             <span class="nav-text">گرید فروشندگان</span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                     <li>
-                                        <a class="sidenav-item-link" href="vendor-list.html">
-                                            <span class="nav-text">لیست فروشندگان</span>
+                                        <a class="sidenav-item-link" asp-controller="Sellers" asp-action="Index">
+                                            <span class="nav-text" >لیست فروشندگان</span>
                                         </a>
                                     </li>
-                                    <li>
+@*                                    <li>
                                         <a class="sidenav-item-link" href="vendor-profile.html">
                                             <span class="nav-text">پروفایل فروشنده</span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                 </ul>
                             </div>
                         </li>
@@ -68,17 +73,18 @@
                             </a>
                             <div class="collapse">
                                 <ul class="sub-menu" id="users" data-parent="#sidebar-menu">
-                                    <li><a class="sidenav-item-link" href="user-card.html"><span class="nav-text">گرید کاربران</span></a></li>
+                                    @*<li><a class="sidenav-item-link" href="user-card.html"><span class="nav-text">گرید کاربران</span></a></li>*@
                                     <li><a class="sidenav-item-link" asp-controller="Customers" asp-action="Index"><span class="nav-text">لیست کاربران</span></a></li>
-                                    <li>
+@*                                    <li>
                                         <a class="sidenav-item-link" href="user-profile.html">
                                             <span class="nav-text">پروفایل کاربر</span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                 </ul>
                             </div>
                             <hr>
                         </li>
+
                         <li class="has-sub">
                             <a class="sidenav-item-link" href="javascript:void(0)">
                                 <i class="mdi mdi-dns-outline"></i> <span class="nav-text">دسته‌بندی‌ها</span> <b class="caret"></b>
@@ -94,9 +100,10 @@
                                 </ul>
                             </div>
                         </li>
+
                         <li class="has-sub">
                             <a class="sidenav-item-link" href="javascript:void(0)">
-                                <i class="mdi mdi-palette-advanced"></i> <span class="nav-text">محصولات</span> <b class="caret"></b>
+                                <i class="mdi mdi-cart"></i> <span class="nav-text">محصولات</span> <b class="caret"></b>
                             </a>
                             <div class="collapse">
                                 <ul class="sub-menu" id="products" data-parent="#sidebar-menu">
@@ -115,42 +122,45 @@
                                 </ul>
                             </div>
                         </li>
+
                         <li class="has-sub">
                             <a class="sidenav-item-link" href="javascript:void(0)">
-                                <i class="mdi mdi-cart"></i> <span class="nav-text">سفارشات</span> <b class="caret"></b>
+                                <i class="mdi mdi-palette-advanced"></i> <span class="nav-text">مزایده ها</span> <b class="caret"></b>
                             </a>
                             <div class="collapse">
                                 <ul class="sub-menu" id="orders" data-parent="#sidebar-menu">
-                                    <li><a class="sidenav-item-link" href="new-order.html"><span class="nav-text">سفارش جدید</span></a></li>
+                                    <li><a class="sidenav-item-link" href="new-order.html"><span class="nav-text">مزایده های ثبت شده</span></a></li>
                                     <li>
                                         <a class="sidenav-item-link" href="order-history.html">
-                                            <span class="nav-text">گزارش سفارش </span>
+                                            <span class="nav-text"> مزایده های در حال اجرا </span>
                                         </a>
                                     </li>
                                     <li>
                                         <a class="sidenav-item-link" href="order-detail.html">
-                                            <span class="nav-text">جزییات سفارش </span>
+                                            <span class="nav-text"> مزایده های تمام شده </span>
                                         </a>
                                     </li>
-                                    <li>
+                                    @* <li>
                                         <a class="sidenav-item-link" href="invoice.html">
                                             <span class="nav-text">فاکتور </span>
                                         </a>
-                                    </li>
+                                    </li>*@
                                 </ul>
                             </div>
                         </li>
+
                         <li>
                             <a class="sidenav-item-link" asp-controller="comment" asp-action="Index">
                                 <i class="mdi mdi-star-half"></i> <span class="nav-text">نظرات</span>
                             </a>
                         </li>
-                        <li>
+@*                        <li>
                             <a class="sidenav-item-link" href="brand-list.html">
                                 <i class="mdi mdi-tag-faces"></i> <span class="nav-text">برند ها</span>
                             </a>
                             <hr>
                         </li>
+
                         <li class="has-sub">
                             <a class="sidenav-item-link" href="javascript:void(0)">
                                 <i class="mdi mdi-login"></i> <span class="nav-text">احراز هویت</span> <b class="caret"></b>
@@ -161,24 +171,27 @@
                                     <li><a href="sign-up.html"><span class="nav-text">ثبت نام</span></a></li>
                                 </ul>
                             </div>
-                        </li>
+                        </li>*@
+
                         <li class="has-sub">
                             <a class="sidenav-item-link" href="javascript:void(0)">
-                                <i class="mdi mdi-diamond-stone"></i> <span class="nav-text">آیکون ها</span> <b class="caret"></b>
+                                <i class="mdi mdi-diamond-stone"></i> <span class="nav-text">مدال های فروشندگان</span> <b class="caret"></b>
                             </a>
                             <div class="collapse">
                                 <ul class="sub-menu" id="icons" data-parent="#sidebar-menu">
                                     <li>
-                                        <a class="sidenav-item-link" href="material-icon.html">
-                                            <span class="nav-text"> متریال آیکون </span>
-                                        </a>
-                                    </li>
-                                    <li>
                                         <a class="sidenav-item-link" href="font-awsome-icons.html">
-                                            <span class="nav-text"> فونت آوسام آیکون </span>
+                                            <span class="nav-text">ثبت مدال جدید</span>
                                         </a>
                                     </li>
-                                    <li><a class="sidenav-item-link" href="flag-icon.html"><span class="nav-text"> فلگ آیکون </span></a></li>
+
+                                    <li>
+                                        <a class="sidenav-item-link" href="material-icon.html">
+                                            <span class="nav-text"> لیست مدالها </span>
+                                        </a>
+                                    </li>
+
+                                    @*<li><a class="sidenav-item-link" href="flag-icon.html"><span class="nav-text"> فلگ آیکون </span></a></li>*@
                                 </ul>
                             </div>
                         </li>
@@ -224,32 +237,30 @@
                             <li class="dropdown user-menu">
                                 <button class="dropdown-toggle nav-link ec-drop"
                                         data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="~/assets/Admin/img/user/user.png"
+                                    <img src="~/assets/Admin/img/user/user.jpg"
                                          class="user-image" alt="User Image">
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-right ec-dropdown-menu">
                                     <li class="dropdown-header">
-                                        <img src="~/assets/Admin/img/user/user.png" class="img-circle"
-                                             alt="User Image">
+                                        <img src="~/assets/Admin/img/user/user.jpg" class="img-circle" alt="User Image">
                                         <div class="d-inline-block">
-                                            جلال شمس <small class="pt-1">
-                                                <a class="__cf_email__"
-                                                   data-cfemail="4c262324226229342d213c20290c2b212d2520622f2321">john.example@gmail.com</a>
+                                             حسین بشارتی <small class="me-4">
+                                                <a href="mailto:hossein913@gmial.com">hossein913@gmial.com</a>
                                             </small>
                                         </div>
                                     </li>
-                                    <li><a href="user-profile.html"><i class="mdi mdi-account"></i>پروفایل من </a></li>
+@*                                    <li><a href="user-profile.html"><i class="mdi mdi-account"></i>پروفایل من </a></li>
                                     <li><a href="#"><i class="mdi mdi-email"></i> پیام </a></li>
                                     <li><a href="#"><i class="mdi mdi-diamond-stone"></i> پروژه ها</a></li>
                                     <li class="right-sidebar-in">
                                         <a href="javascript:0">
                                             <i class="mdi mdi-settings-outline"></i> تنظیمات
                                         </a>
-                                    </li>
-                                    <li class="dropdown-footer"><a href="index.html"><i class="mdi mdi-logout"></i> خروج </a></li>
+                                    </li>*@
+                                    <li class=" "> <a asp-area="" asp-controller="Authenticate" asp-action="Logout"><i class="mdi mdi-logout"></i> خروج </a></li>
                                 </ul>
                             </li>
-
+@*
                             <li class="dropdown notifications-menu custom-dropdown">
                                 <button class="dropdown-toggle notify-toggler custom-dropdown-toggler">
                                     <i class="mdi mdi-bell-outline"></i>
@@ -386,6 +397,7 @@
                                     </div>
                                 </div>
                             </li>
+                            *@
                             <li class="right-sidebar-in right-sidebar-2-menu">
                                 <i class="mdi mdi-settings-outline mdi-spin"></i>
                             </li>
