[Develop].[Admin].[Sellers/Booths]:Admin can manage the sellers and their booth

--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Edit.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Edit.cshtml
@@ -119,7 +119,7 @@
                                                     
                                                 }
                                             </select>
-                                             <span asp-validation-for="SexualityId" class="text-danger"></span>
+                                            <span asp-validation-for="ProvinceId" class="text-danger"></span>
                                          </div>
                                      </div>
 
