--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Index.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Index.cshtml
@@ -3,14 +3,16 @@
 
  <div class="ec-content-wrapper">
     <div class="content">
-        <div class="breadcrumb-wrapper breadcrumb-contacts">
+        <div class="breadcrumb-wrapper breadcrumb-contacts ">
             <div>
                 <h1>لیست کاربران</h1>
                 <p class="breadcrumbs"><span><a href="index.html">خانه</a></span> <span><i
                             class="mdi mdi-chevron-left"></i></span>کاربر</p>
             </div>
-            <div><button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                    data-bs-target="#addUser"> اضافه کردن کاربر </button></div>
+            <div>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#addUser"> اضافه کردن کاربر </button>
+            </div>
         </div>
         <div class="row">
             <div class="col-12">
