--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/_ViewImports.cshtml
@@ -6,6 +6,8 @@
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Wages;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Product;
 @using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Customers;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Sellers;
+@using App.EndPoints.MvcUi.Areas.AdminArea.ViewModels.Booths;
 @using App.Domain.Core._Common.Dtos.AppSettingDtos;
 @using App.Domain.Core._User.Entities;
 @using App.Domain.Core._User.Enums;
