--- a/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Details.cshtml
+++ b/App.EndPoints.MvcUi/Areas/AdminArea/Views/Customers/Details.cshtml
@@ -130,6 +130,7 @@
                     <div class="profile-content-right profile-right-spacing py-5">
                         <ul class="nav nav-tabs px-3 px-xl-5 nav-style-border" id="myProfileTab"
                             role="tablist">
+                            
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active"
                                         id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
@@ -138,6 +139,7 @@
                                     پروفایل
                                 </button>
                             </li>
+
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link"
                                         id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings"
@@ -146,12 +148,15 @@
                                     تنظیمات
                                 </button>
                             </li>
+
                         </ul>
+
                         <div class="tab-content px-3 px-xl-5" id="myTabContent">
                             <div class="tab-pane fade show active" id="profile" role="tabpanel"
                                  aria-labelledby="profile-tab">
                                 <div class="tab-widget mt-5">
-                                    <div class="row">
+                                    
+@*                                    <div class="row">
                                         <div class="col-xl-4">
                                             <div class="media widget-media p-3 bg-white border">
                                                 <div class="icon rounded-circle mr-3 bg-primary">
@@ -314,7 +319,9 @@
                                                 <div class="mt-3"></div>
                                             </div>
                                         </div>
-                                    </div>
+                                   
+                                    </div>*@
+
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="settings" role="tabpanel"
